css for header bar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <h1>Glen Larsen</h1>
 
                 <div id= "link_bar">
-                    <a href="portfolio.html" id= "link_portfolio">Portfolio</a>
+                    <a href="#" id= "link_about">About</a>
                     <a href="contact.html" id= "link_contact">Contact</a>
-                    <a href="#" id= "about">About</a>
+                    <a href="portfolio.html" id= "link_portfolio">Portfolio</a>
                 </div>
 
             </div>
@@ -51,5 +51,5 @@
         </footer>
 
     </body>
-    
+
 </html>
