--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
                 <h1>Glen Larsen</h1>
 
                 <div id= "link_bar">
+                    <a href="index.html" id= "link_about">About</a>
+                    <a href="#" id= "link_contact">Contact</a>
                     <a href="portfolio.html" id= "link_portfolio">Portfolio</a>
-                    <a href="contact.html" id= "link_contact">Contact</a>
-                    <a href="#" id= "about">About</a>
                 </div>
 
             </div>
