--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Glen Larsen About Me</title>
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body>
@@ -28,21 +28,29 @@
 
             <hr>
 
-            <h4>Name</h4>
+            <div class="contact-form">
+            
+                <form action="ultrapancake@gmail.com" method="POST">
 
-            <input type="text" name="Name" id="name_input">
+                    <h4>Name</h4>
 
-            <h4>Email</h4>
+                    <input type="text" name="Name" id="name_input" placeholder="Your Name" required>
 
-            <input type="text" name="Email" id="email_input">
+                    <h4>Email</h4>
 
-            <h4>Message</h4>
+                    <input type="email" name="email" id="email_input" placeholder="Your Email" required>
 
-            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    <h4>Message</h4>
 
-            <br>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
 
-            <button>Submit</button>
+                    <br>
+
+                    <input type="submit" id="submit" value="SEND MESSAGE">
+
+                </form>
+
+            </div>
 
         </div>
 
